# wine_quality_project

./: README.md  pyproject.toml  requirements.txt
data/: wine_pro_cleaned.csv
data/processed/: wine_quality_processed.csv  winequality_with_quality_category.csv
models/: Gradient_Boosting_RFE.joblib  KNN_RFE.joblib  Logistic_Regression_RFE.joblib  Ridge_Classifier_RFE.joblib  SVC_RFE.joblib  ada_boost.pkl  decision_tree.pkl  gradient_boosting.pkl  knn.pkl  logistic_regression.pkl  naive_bayes.pkl  random_forest.pkl  ridge.pkl  scaler.pkl  svm.pkl
notebooks/: 01_exploration.ipynb  02_data_cleaning.ipynb  03_model_experiments.ipynb  04_model_evaluation.ipynb
reports/: evaluation_results.json  model_comparison.csv
src/data_management/: __init__.py  downloader.py  loader.py  processor.py
src/features/: __init__.py  engineering.py  selection.py  transformation.py
src/models/: __init__.py  comparator.py  evaluator.py  trainer.py
src/pipeline/: main.py
src/visualization/: __init__.py  eda_plot.py  model_plots.py
winequality/: pyvenv.cfg
winequality/Scripts/: activate  activate.bat  jsonpointer
