[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wine-quality-project"
version = "1.0.0"
description = "Wine Quality Classification using Machine Learning"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Data Science Student", email = "student@example.com" }]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "flask>=2.3.0",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
